Added 'EmailAttribute' Testform

--- a/Umbraco.TestInstance/Views/Forms.cshtml
+++ b/Umbraco.TestInstance/Views/Forms.cshtml
@@ -1,5 +1,13 @@
-﻿@using Umbraco.Cms.Web.Common.PublishedModels;
+﻿@using Umbraco.TestInstance.Models.Forms
 @inherits Umbraco.Cms.Web.Common.Views.UmbracoViewPage
 @{
-	Layout = null;
+	Layout = "Master.cshtml";
 }
+
+
+
+<section class="bg-dark-gray pb-10">
+	<!-- Email Attribute -->
+	<partial name="Partials/forms/emailAttribute" model="@(new EmailAttributeFormModel())"></partial>
+	<!-- Email Attribute End -->
+</section>
